fix adjusted alignment in the navbar

--- a/src/main-comp/styles.scss
+++ b/src/main-comp/styles.scss
@@ -100,6 +100,7 @@ header {
       gap: 6rem;
       list-style: none;
       text-decoration: none;
+      margin-bottom: 0 !important;
     }
 
     ul li a {
